# mono-Agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: workflow.yml
Agents/: HelloWorld.md
Tools/: hello_tool.py
src/mono_agent/: __init__.py  agent.py  cli.py  memory.py  orchestrator.py
